refatorando a aplicação
