# src/shared/infra/http/routes/index.ts
@@ -7,7 +7,7 @@ import { usersRoutes } from "./users.routes";
 
 const router = Router();
 
-router.use("/categories", categoriesRoutes);
+router.use("/categories", [categoriesRoutes, specificationRoutes]);
 router.use("/specifications", specificationRoutes);
 router.use("/users", usersRoutes);
 router.use(authenticateRoutes);
